2009-XX-XX:
    * version 2.1 (probably)
    * add :silent
    * add $MY_VIMPERATORRC
    * add ' and " local marks
    * add "w" and "W" Normal mode mappings for symmetry with o/O and t/T
    * add :messclear

2009-03-28:
    * version 2.0
    * IMPORTANT: For compatibility with vim, guioptions=b has been renamed
      'B'. 'b' now represents the bottom scrollbar.
    * IMPORTANT: :set now sets multiple options, as in Vim. Spaces in values
      must be quoted or escaped.
    * IMPORTANT: Due to much improved autocompletion, changed default 'complete' option
      value to 'sfl', listing intelligent Firefox location bar results. Using 'b' or 'h'
      might cause problems/massive slowdowns, use with care!
    * IMPORTANT: AlwaysHint mode with ;F mode changed the semantics slightly.
    * IMPORTANT: command actions now take an args object, returned from
      commands.parseArgs, as their first argument. This will break any commands
      not using the args parser explicitly.  The old string value is now
      available via args.string.
    * IMPORTANT: 'verbose' is now used for message levels. Logging is
      controlled by the extensions.liberator.loglevel preference.
    * IMPORTANT: :viusage and :exusage now jump to the help index, use the
      special versions for the old behavior.
    * IMPORTANT: renamed Startup and Quit autocmd events to VimperatorEnter and
      VimperatorLeave respectively.
    * IMPORTANT: 'verbose' is now by default at 1, set to 0 to not show any status messages.
    * IMPORTANT: $VIMPERATOR_HOME is no longer used.

    * Selecting an <input type="file"> with hints now causes the commandline to prompt
      for file input (instead of doing nothing).
    * [count]<C-n> now goes to the [count]th next tab rather than the [count]th tab.
    * add ~/.vimperator/info/{profile}/, similar to viminfo
    * add $VIMPERATOR_RUNTIME, $VIMPERATOR_INIT
    * :hardcopy now supports output redirection to a file on Unix and MacUnix