@@ -39,3 +39,4 @@ Patches (in no special order):
   * Ryan Zheng (ctrl-x/a support)
   * Dan Boger (:set online support)
   * Štěpán Němec (help copy-editing and favicon support)
+  * Jarkko Oranen ('maxitems' option)
