@@ -480,6 +480,12 @@ load plugins earlier, use the [c]:loadplugins[c] command within the
 vimperatorrc.
 ____
 
+|\'maxitems'|
+||'maxitems'|| number (default: 20)
+____
+Maximum number of items to display at once in a listing.
+____
+
 
 |\'msgs'| |\'messages'|
 ||'messages' 'msgs'|| number (default: 100)
